--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=KarenCampos842_mazegamesource
+sonar.projectKey=KarenCampos842_Ejemplo
 sonar.organization=karencampos842
 
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=mazegamesource
+#sonar.projectName=Ejemplo
 #sonar.projectVersion=1.0
 
 
