--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,6 @@
 sonar.projectKey=KarenCampos842_Ejemplo
 sonar.organization=karencampos842
+sonar.host.url=https://sonarcloud.io
+sonar.sources=src
+sonar.java.binaries=out
 
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Ejemplo
-#sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
