--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,48 @@
-name: Build
+name: Build and analyze
+
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - master
+
 jobs:
-  sonarqube:
-    name: SonarQube
-    runs-on: windows-latest
+  build:
+    runs-on: ubuntu-latest # ✅ Vuelve a Ubuntu
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Compile project
+        run: javac -d out src/**/*.java
+
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Install SonarScanner
+        run: |
+          # 🛑 CORREGIDO: Descarga la versión de Linux (.zip para Linux)
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-7.2.0.5079-linux.zip 
+          unzip sonar-scanner.zip -d $HOME
+          # 🛑 CORREGIDO: Ajusta la ruta a la carpeta de Linux
+          echo "$HOME/sonar-scanner-7.2.0.5079-linux/bin" >> $GITHUB_PATH 
+
+      - name: Run SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: sonar-scanner # Leerá la configuración del archivo sonar-project.properties
